--- a/styles/style.css
+++ b/styles/style.css
@@ -146,15 +146,16 @@
 }
 .upcoming-offer{
     width: 1320px;
-    height: 480px;
+    height: 400px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin: 120px 170px;
+    gap: 100px;
 }
 .offer-details{
-    width: 390px;
+    width: 400px;
     text-align: left;
-    margin-top: 70px;
+    margin-top: 80px;
 }
 .offer-title{
     color: #F00;
@@ -163,8 +164,25 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    margin-bottom: 0;
 }
-
+.coming-soon{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    /* margin-top: 10px; */
+    margin: 10px 0 0 0;
+}
+.offer-description{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: 20px;
+}
 .circle{
     display: flex;
     width: 400px;
@@ -176,4 +194,29 @@
 .circle-image{
     padding: 40px;
     
+}
+#year-title{
+    margin-top: 70px;
+}
+.year{
+    color: #F00;
+    font-family: Inter;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+.year-description{
+    width: 275px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23px; /* 160% */
+    margin-bottom: 0;
+}
+#year-title img{
+    width: 140px;
+    height: 140px;
+    margin-top: 10px;
 }
