--- a/styles/style.css
+++ b/styles/style.css
@@ -261,3 +261,97 @@
     position: absolute;
     left: 200px;
 }
+.gift-container{
+    width: 1320px;
+    height: 1000px;
+    margin: 120px 175px;
+}
+.item-container{
+    width: 1320px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 120px;
+}
+.product{
+    width: 320px;
+    height: 350px;
+}
+.best-gift{
+    color: #F00;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+.portfolio{
+    color: #070211;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    margin: 16px 0;
+}
+.gift-description{
+    width: 850px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+}
+.newsletter{
+    width: 1320px;
+    height: 600px;
+    text-align: center;
+    margin: 220px 175px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+}
+.cover{
+    margin: 80px 0 0 0;
+}
+.letter-title{
+    color: #070211;
+    text-align: center;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    margin: 20px;
+}
+.letter-description{
+    width: 800px;
+    color: rgba(7, 2, 17, 0.60);
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-left: 250px;
+}
+.input-form{
+    width: 600px;
+    position: relative;
+}
+#email{
+    width: 100%;
+    height: 60px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: #FFF;
+    border: 0;
+    color: rgba(7, 2, 17, 0.30);
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 25px;
+    margin-left: 335px;
+}
+.subscribe{
+    width: 210px;
+    height: 100%;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    position: absolute;
+
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
