add newsletter setion

--- a/styles/style.css
+++ b/styles/style.css
@@ -329,6 +329,8 @@
 .input-form{
     width: 600px;
     position: relative;
+    margin-top: 50px;
+    text-align: center;
 }
 #email{
     width: 100%;
@@ -350,8 +352,13 @@
     border-radius: 0px 50px 50px 0px;
     background: #F00;
     position: absolute;
-
-    right: 0;
-    top: 0;
+    left: 725px;
     bottom: 0;
+    border: 0;
+    color: #FFF;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
 }
