--- a/styles/style.css
+++ b/styles/style.css
@@ -362,3 +362,52 @@
     font-style: normal;
     font-weight: 600;
 }
+footer{
+    width: 100%;
+    height: 600px;
+    background:#070211;
+}
+.contact-address{
+    display: flex;
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 40px;
+    gap: 500px;
+}
+.address{
+    margin: 100px 0 0 180px;
+}
+.house-number,.phone{
+    margin-bottom: 0;
+}
+.location,.website{
+    margin-top: 0;
+}
+.contact-num{
+    margin: 100px 0 0 130px;
+}
+hr{
+    width: 1320px;
+    height: .01px;
+    background: rgba(76, 74, 74, 0.15);
+}
+.social{
+    text-align: center;
+    padding: 45px;
+}
+.social img{
+    /* margin-right: 25px; */
+    padding-right: 20px;
+}
+.last{
+    display: flex;
+    color: #FFF;
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    gap: 950px;
+    margin: 50px 190px;
+}
+
